@@ -3,21 +3,31 @@ Hash: SHA256
 
 AUX x264-encoder-nolib-20110425.patch 1547 SHA256 124955cb5322d5f40771669798217991826dbc1f8ca9daac821d672238011c88 SHA512 48f845c5665a3ba8c77653260d017e89a58eee75693fe2c532ce1eea4e4ea1f4420c0126a63843f27fddb37bd76a529cb0a89a421a9d65f7cfc7226e49a579f1 WHIRLPOOL d8cf79801c47361a7cd689f569843df930628b5fd281c00a5b3b20d46c6a869853d2382d52dd5332a742f31f38cce190b1cfc27ef05c3b71d5b84b3456a5eff9
 AUX x264-encoder-nostrip.patch 433 SHA256 1210914cc52de908b840775ab8e4a107d95aeced690c2f115320d31e587a2ffa SHA512 4103c43f54aebc814f4c5aecac0f115ff9f25fef352ce5945b37eb9d7a191fc21c1f608f81b6fb3d534a0a72b8bc4e49c6ed7e1e0d86fe39d18ad4d55241d6dd WHIRLPOOL ae648a2a61d2fcd3c35f5fe16b110249b7acbe2b2bac497b980c557bb3e95f8975296361f7482b5419ca88a1cf25258da60be53805feb6fa426b865dcd0ff4e3
-DIST x264-snapshot-20110426-2245.tar.bz2 495607 SHA256 2610ea30eb8857f7b8933137f8994f83243038fd8e336343e3422a5f25459fcc
 DIST x264-snapshot-20111220-2245.tar.bz2 532402 SHA256 c360b0320cc72a77c5f2ececbd100bbbdd0461227f7c4bc06212e86f5aa0fb8a
 DIST x264-snapshot-20120327-2245.tar.bz2 551101 SHA256 065ffdbd7c9f9dcc7194bd6a4943b0d4b2e99b5dd68979fb3634644c725c2cbe
 DIST x264-snapshot-20120707-2245.tar.bz2 554243 SHA256 52fdc8b558fa7dcb6419fef73fb07e771cdc2544f7652cde42968d640139eedb SHA512 5e263dfe4b4defd66a8a855467692473723ada9c34ab8da7042f2d10327f944914d0c8103f22edd4dc7a1c4664db5bfbf42052652c9f57b392db32f4ab77081b WHIRLPOOL 1a9061e5940e22071390b579abf859fec49f8da51f31e241b65513566eda66178c46b4b4c20318bb981230a16511e84b89e6174bc7f9ccbd48915a909cef3b5b
-EBUILD x264-encoder-0.0.20110426.ebuild 1599 SHA256 c845fd4500e9d2288aed581e4aaabedea321f6b1cac9c8251630e3a0fb98de85 SHA512 25b87c25b476d1991856f95e5b611393d7edd6e2bc50fa98ed743524fa597b068aaee781b5a793ed494d21e720eb8383583657cd36f4d3553d103b9645fd7068 WHIRLPOOL e0212ed7504e5deb368d96bb403de8b555e4f9c8e9106c9589987b14fde5ebfba82f3845994a590915c1aec2d964bd791accf48b45fa4392475778f9e626a695
+DIST x264-snapshot-20130506-2245.tar.bz2 608013 SHA256 da7055a457d19b97ff35a2830e7caae665ea06d22ddc28393168983d1cd21f61 SHA512 6ba35f6b39fefbda6990dc0fd674efbe403b0616f2f02d71ae3e7bbc6ce2bab8878a963dd5f306f8a2b3b9a74c5c0b4dbf9dfb9dc0e602b807f726cf072905b5 WHIRLPOOL bfb4b7dd0e865cd9305ac177f5c544555004039209dda695fcc932aab647b87c96f0bae4fa040276bd3dbee64dcf982f3c2447efdbc01c1d42f040c9d5d0af85
 EBUILD x264-encoder-0.0.20111220.ebuild 2465 SHA256 fb2c612df6bc5e6c6fa18c3652d804c060f8780563f210b8703a8259b2bd0b71 SHA512 c31380c742c74621fbf3fb77d020dd9dcb634d304d3ff39f230aff17661f7bc61ef27ade6d715e033829bbe1b11651f69e6f133510f842209738aa12bbb89af4 WHIRLPOOL ea64f1d3b0202a5768c05d68edcf93888056f4d7a0a2719469354d388cdcb535e48e3825ad4ae5d5538a395b1ce1efdcd716e4610ad449e0115ed681e925420a
 EBUILD x264-encoder-0.0.20120327.ebuild 2467 SHA256 b658c9c8fb9051fd8492bb7bfa64375bb80b819edee7e3c991369746a4b3321a SHA512 04bfb8fdfe0dd37e9fce0f697e5448e07fbf950abc635edc9b2f076afb70f4b09cac8051eae40bc12c8e427e8a660cea852274aa9e18b71c667027ef09826f15 WHIRLPOOL 6b8c22d6b96066bd99ecc1093f12b82f57031eb688a94abdcc13ac78be7ec686a127e63fc3ce31af106310f2bfa37ee2bf83247b414337dbbd8e7d6d13b40455
 EBUILD x264-encoder-0.0.20120707.ebuild 2492 SHA256 c1a62164135d3415c75b421d5e83d2d19a4847b2c0c5f4544f88d6f1946f3b0b SHA512 77c681c5983a3e85f981dc055ef702a9feb7876cad32ce33a078bf1e66b32525397a098fee45178b400c035f37e659c6020c14aadd6397f1e150d55de3130791 WHIRLPOOL 2fa20f07cb0bbd42e55ad0d2f2fde3fc3be11e2b443dc7860b7848587a1189637fcae420fe1fc3e0cc7df2dba4db47237b007d41d31d9f20dc0db8e9eda7d9f5
-EBUILD x264-encoder-9999.ebuild 1975 SHA256 44d866f5baed79b6e6002689c0f04c6a48eb3f7ab8be59255faeef4ff8beb72c SHA512 f5cae4f2a3bbde59e154a036dbc17d64385a2d9860dc85caf4d9ca0e4c67b31e8f0b0a5528531bbbffa6f3d19518dc57a1de5511ec97ae23d160e173710c2eca WHIRLPOOL b8d70366c82f3794b8c07511cb2e65aca5ba8681685b8bafd7798f3a0b47707e1358eaea23360b4d99768ad06983ea80c938d6e2da3bbea1fe6d1fed97125809
-MISC ChangeLog 11903 SHA256 c144c1f57552f6014ae27b0a7d5ce659bdd4aa2417716b3b337fe451339e800a SHA512 68a7eb82b97049fc920f6652bc0e4b59f555232c4e3fd0f2da6f14b0e65244c7927ffd6431e56f54840774daa04450f32e216c1ba29b0a88c80cfc58d29371d5 WHIRLPOOL 42d9246f555c205fa95df74ec47de80e539061bfb0fd16240f25aaae8620f3768cafaa09cb31b34fb90a7643d12ee40712d88063f958677f4756220a89689c0a
-MISC metadata.xml 518 SHA256 3c234897ff680a5fe89179bd8da788695cee616a856c0e9fbc20eb6c388b01b5 SHA512 9f15587a687a0672afd36480b64862d1faa5a6b2f9c145c40837753db9264ff48b5b130bc18f5bd092f5484541183ae340acb72944a8db2381056e52189eb7ef WHIRLPOOL 45bb268d0c8c4d053966b70cc1e067f12582f59286c4f5de44dd2e0c71c6b9deb9be1ba531adcd3374809cc50a0a13da905aa97cdff5a722215b60b5e73f0128
+EBUILD x264-encoder-0.0.20130506.ebuild 2311 SHA256 4c318765ebcf4e2833a0eba25aa5f67570c9aa1ccb61f9c8cd67ad0d7a97437b SHA512 5dcd585927215f08df37a34692165d8af8f1417d52612117d7aa046a562868ddf70ca9bd218517d65aaa839d1298ed7ee445cb6810c04a0eec95464fdc16045a WHIRLPOOL c1e3f98b925f72e2af2784dacc58ca2f3ec309f7b3968ba28789e8ebbec09f8617b9ee3a95fe9f9997924e43b44ec3ec0bc1e95994702861e9ad125561535530
+EBUILD x264-encoder-9999.ebuild 2303 SHA256 da4735376ad7d73f9f2abda8affc6a85d691f691b880c76c70914414b8a735d4 SHA512 fb0bf87bae5c52fcc9b686da33522655f7fe03386d355e00287226a0873a909ad61d3636de2a23ed17c04fb024fbe4dda697549af8a6e2a3921086bbedfda3d5 WHIRLPOOL d1bc73a932f9552550dc4ca7d5bc95657458477ccd07c627ecfcbfdcd066b3eb1340ffe74798bae96b111a70a9b036105bc5d71b16e41fff7c1d166fcddf68c1
+MISC ChangeLog 12277 SHA256 bc8245e35bfadc6ace23546ae33252ebb21674f9f14d71e22613bb0db42afbc3 SHA512 e77db8b626d2c1e501980619678d6fe464c8d224514c449eaa6715b907e75bb9c711d1c06161ad85f0aa4b153d61172c138da66213d953c3e3a00b987fe0ebf3 WHIRLPOOL ca37e5f334dd6768b7f115c2f7ee8783eedb84c834c6de7a9ac462c231ca9293a7a7d9776731b45bc5156c145d3cf13650d4cdaac02be82a1b0a9ffe2d73de0b
+MISC metadata.xml 593 SHA256 cab69e07127b5c284546cc62f3c1c59bab27c18c23b0f907c74066928d98ecab SHA512 ee0e34f611e2f6625177c2d58c78560558a99d87e965c56dc079fa1ce36f737703b1a866fc3f624e3f19dcbc9f9ba5167dea5d1ac316551d366e48c76a20ac42 WHIRLPOOL 98c4b143354284ef6c81e8e6901611076de5d96d7afed73c518617a2a01bf4180077f02dd21484cd6c86f2c9fb990f5637c8ad3a8a631916728644fd44cb6146
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlD30SwACgkQcXOrnRGRc45bMQD/VdN+uFm1CcAOmyjsW4c0UV+I
-hI78Im8mGuUe3eiAjJsA/3o6rkHJB9jr5ldyc9uUUgoVFSAYVm5/PCMDvQtUdyQp
-=J3ZP
+iQIcBAEBCAAGBQJRwOcWAAoJEHy/RO9cNQiDZKwP/RnMUIbrv8wiWlePA1+DJrIb
+f9ZlCc5cUcEfv19g873cCuGJJqdgnhsbyMwrLfW7ACurZCoNmOfJ+qpyLo6fqnhF
+aMaF/1OPFMGcqVil313sKxqdWFJF8iGP1Ih34UmDjkSA7hH3cF74f8jccrsZ5bs1
+YPiySg/Gykoj2X/l5fp9ogaQpqxEsL2KWLn0uZfB2YynxqLN3QbT1PMEqquFOWcP
+s1E/6vGvas0Ez7wc2rR3LiMV9oXKTz4muVWfiASazG1BkAH5+bbrFMiGgHTZ6oBD
+iP77PgjrBVBs0o368k06FTesTE08Cr9vsGyAi0pscGajFjoQSym6YHky6+KvnxDT
+OKrvliVIU6+oEs8xBS44PZo1cjbemyStxbwXkWh357c7rnaoxNgRE+iPpwM9/EtE
+XGmyPBzJIr9iRkA4zlQe4JkOs7SqjhacJ/H7Vssbb5plP6eezCuBz63xpaNaUj/j
+AlIbQEoaCA0zDc19MmPNPstyB/z3FnrZbDMWgxe/46E9rB32G5Edygzrpp6U+ZFa
+BLfCT/Of7PUWIs+DV7xLoK8rj9CxsZAa1DoiYtGJ+GJqUT5Ytc6JFElkUTqL5Efo
+wv3Ct+eo+GjD+jnOUiF4rGsdLpKohhSeKP70jFE3Kp0HlCfbaw+iWfGd/SGnR/rj
+HAP3YfsddLJXXpDOmamW
+=SHx1
 -----END PGP SIGNATURE-----
