@@ -6,8 +6,9 @@
     <email>media-video@gentoo.org</email>
   </maintainer>
   <use>
-      <flag name="10bit">Set output bit depth to 10</flag>
-      <flag name="interlaced">Enable interlaced encoding support, this can decrease encoding speed by up to 2%</flag>
-      <flag name="ffmpegsource">Enable ffmpegsource aka ffms support, disables lavf</flag>
+    <flag name="10bit">Set output bit depth to 10</flag>
+    <flag name="avs">enable AvxSynth support in the AviSynth input module</flag>
+    <flag name="ffmpegsource">Enable ffmpegsource aka ffms support, disables lavf</flag>
+    <flag name="interlaced">Enable interlaced encoding support, this can decrease encoding speed by up to 2%</flag>
   </use>
 </pkgmetadata>
