@@ -1,6 +1,15 @@
 # ChangeLog for media-video/x264-encoder
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/x264-encoder/ChangeLog,v 1.69 2013/01/17 10:23:12 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/x264-encoder/ChangeLog,v 1.70 2013/06/18 23:02:45 chutzpah Exp $
+
+*x264-encoder-0.0.20130506 (18 Jun 2013)
+
+  18 Jun 2013; Patrick McLean <chutz@gentoo.org>
+  -x264-encoder-0.0.20110426.ebuild, +x264-encoder-0.0.20130506.ebuild,
+  x264-encoder-9999.ebuild, metadata.xml:
+  Version bump (bug #473726). Refactor ebuild to be much less verbose, use usex
+  rather than myconf. Add avs USE flag. Drop 0.0.20110426 since it uses an old
+  EAPI.
 
   17 Jan 2013; Luca Barbato <lu_zero@gentoo.org>
   x264-encoder-0.0.20120707.ebuild:
